--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -23,11 +23,17 @@
       integrity="sha384-GqVMZRt5Gn7tB9D9q7ONtcp4gtHIUEW/yG7h98J7IpE3kpi+srfFyyB/04OV6pG0"
       crossorigin="anonymous"
     ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/main.css" />
     <!-- Formio CSS-->
     <link
       rel="stylesheet"
       href="https://unpkg.com/formiojs@latest/dist/formio.full.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <!--Bootstrap-Icons-->
     <link
